kubernetes/monitoring/prometheus/prometheus-blackbox-exporter.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-prometheus-blackbox-exporter
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: monitoring-prometheus-blackbox-exporter
  template:
    metadata:
      labels:
        k8s-app: monitoring-prometheus-blackbox-exporter
    spec:
      volumes:
        - name: blackbox-exporter-config-volume
          configMap:
            name: blackbox-exporter-config
            items:
              - key: blackbox.yml
                path: blackbox.yml
            defaultMode: 0744
      containers:
      - name: prometheus-blackbox-exporter
        ports:
        - containerPort: 9115
        image: prom/blackbox-exporter:master
        args:
          - --config.file=/config/blackbox.yml
        volumeMounts:
        - name: blackbox-exporter-config-volume
          mountPath: /config/blackbox.yml
          subPath: blackbox.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    task: monitoring
  name: monitoring-prometheus-blackbox-exporter
  namespace: monitoring
spec:
  ports:
  - port: 80
    targetPort: 9115
  selector:
    k8s-app: monitoring-prometheus-blackbox-exporter
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-blackbox-exporter-ingress
  namespace: monitoring
spec:
  rules:
  - host: blackbox.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-prometheus-blackbox-exporter
            port:
              number: 80
