kubernetes/monitoring/prometheus/prometheus-push-gateway.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-prometheus-push-gateway
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: monitoring-prometheus-push-gateway
  template:
    metadata:
      labels:
        k8s-app: monitoring-prometheus-push-gateway
    spec:
      containers:
      - name: prometheus-push-gateway
        ports:
        - containerPort: 9091
        image: prom/pushgateway
        resources:
          limits:
            cpu: 250m
            memory: 180Mi
          requests:
            cpu: 102m
            memory: 180Mi
        args:
          - --web.enable-admin-api
          - --persistence.file=/pushgatewaydata/persistence
        volumeMounts:
        - name: prometheus-push-gateway-volume
          mountPath: /pushgatewaydata
      volumes:
      - name: prometheus-push-gateway-volume
        persistentVolumeClaim:
          claimName: prometheus-push-gateway-claim
---
apiVersion: v1
kind: Service
metadata:
  labels:
    task: monitoring
  name: monitoring-prometheus-push-gateway
  namespace: monitoring
spec:
  ports:
  - port: 80
    targetPort: 9091
  selector:
    k8s-app: monitoring-prometheus-push-gateway
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-push-gateway-ingress
  namespace: monitoring
spec:
  rules:
  - host: prometheus-push.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-prometheus-push-gateway
            port:
              number: 80
