kubernetes/monitoring/prometheus/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-prometheus
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: monitoring-prometheus
  template:
    metadata:
      labels:
        task: monitoring
        k8s-app: monitoring-prometheus
    spec:
      containers:
      - name: prometheus
        ports:
        - containerPort: 9090
        image: prom/prometheus
        volumeMounts:
        - name: prometheus-config
          mountPath: /etc/prometheus/prometheus.yml
          subPath: prometheus.yml
      volumes:
      - name: prometheus-config
        configMap:
          name: prometheus-config
          items:
          - key: prometheus.yml
            path: prometheus.yml
          defaultMode: 0744
---
apiVersion: v1
kind: Service
metadata:
  labels:
    task: monitoring
    # For use as a Cluster add-on (https://github.com/kubernetes/kubernetes/tree/master/cluster/addons)
    # If you are NOT using this as an addon, you should comment out this line.
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: monitoring-prometheus
  name: monitoring-prometheus
  namespace: monitoring
spec:
  ports:
  - port: 80
    targetPort: 9090
  selector:
    k8s-app: monitoring-prometheus
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  # annotations:
  #   kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: prometheus.bas
    http:
      paths:
      - path: /
        backend:
          serviceName: monitoring-prometheus
          servicePort: 80
