kubernetes/monitoring/prometheus/prometheus.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      # Essential
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: la1r.workload/essential
                operator: In
                values:
                - "true"
      priorityClassName: essential

      serviceAccountName: prometheus # service account for prometheus for kubernetes service discovery only
      containers:
      - name: prometheus
        image: prom/prometheus
        args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus"
            - "--storage.tsdb.retention.time=2d"
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "2Gi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 9090
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
        - name: prometheus-volume
          mountPath: /prometheus
        - name: prometheus-config
          mountPath: /etc/prometheus/prometheus.yml
          subPath: prometheus.yml
        - name: prometheus-targets
          mountPath: /etc/prometheus/targets.json
          subPath: targets.json
        - name: prometheus-rules
          mountPath: /etc/prometheus/rules.yml
          subPath: rules.yml
      volumes:
      - name: localtime
        hostPath:
          path: /etc/localtime
          type: File
      - name: prometheus-volume
        persistentVolumeClaim:
          claimName: prometheus-data-claim
      - name: prometheus-config
        configMap:
          name: prometheus-config
          items:
          - key: prometheus.yml
            path: prometheus.yml
          defaultMode: 0744
      - name: prometheus-targets
        configMap:
          name: prometheus-targets
          items:
          - key: targets.json
            path: targets.json
          defaultMode: 0744
      - name: prometheus-rules
        configMap:
          name: prometheus-rules
          items:
          - key: rules.yml
            path: rules.yml
          defaultMode: 0744
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
  name: prometheus
  namespace: monitoring
spec:
  ports:
  - name: prometheus
    port: 9090
    targetPort: 9090
  selector:
    app: prometheus

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-https
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
  - secretName: prometheus-bas-tls
  rules:
  - host: prometheus.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
